Bug #5878: Double scrollbar in print preview table

--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,7 @@
 /* Fix here sn. */
 #organizer_main_cointainer div.forced_scroll {
     border: solid 1px #ddd;
-    overflow-x: scroll;
+    overflow-x: hidden;
     margin-left:10px;
     margin-right:10px;
     padding-top:2em;
